APIs/azure.com/servicefabric/6.4.0.36/java-client/docs/NodeLoadMetricInformation.md


# NodeLoadMetricInformation

Represents data structure that contains load information for a certain metric on a node.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**isCapacityViolation** | **Boolean** | Indicates if there is a capacity violation for this metric on the node. |  [optional] |
|**name** | **String** | Name of the metric for which this load information is provided. |  [optional] |
|**nodeBufferedCapacity** | **String** | The value that indicates the reserved capacity for this metric on the node. |  [optional] |
|**nodeCapacity** | **String** | Total capacity on the node for this metric. |  [optional] |
|**nodeLoad** | **String** | Current load on the node for this metric. |  [optional] |
|**nodeRemainingBufferedCapacity** | **String** | The remaining reserved capacity for this metric on the node. |  [optional] |
|**nodeRemainingCapacity** | **String** | The remaining capacity on the node for this metric. |  [optional] |



